# flet-python-calculator

./: LICENSE  README.md  index.html  pyproject.toml
src/: main.py
