[project]
name = "LOGIN-PYTHON-FLET"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "David Salas Lorente", email = "yoansalas76@gmail.com" }
]
dependencies = [
    "flet>=0.84.0"
]

[dependency-groups]
dev = [
    "flet-cli>=0.84.0",
    "flet-desktop>=0.84.0",
    "flet-web>=0.84.0",
]

[tool.flet]
org = "com.davidsalaslorente"
product = "LOGIN-PYTHON"
company = "David"
copyright = "Copyright (C) 2023-2026 by David Salas Lorente"

[tool.flet.app]
path = "src"
